--- a/configs/ithq.yaml
+++ b/configs/ithq.yaml
@@ -4,7 +4,7 @@ model:
   params:
     content_info: {key: image}
     condition_info: {key: text}
-    content_codec_config: 
+    content_codec_config:
     # target: image_synthesis.modeling.codecs.image_codec.openai_dvae.OpenAIDiscreteVAE
     # target: image_synthesis.modeling.codecs.image_codec.taming_gumbel_vqvae.TamingGumbelVQVAE
       target: image_synthesis.modeling.codecs.image_codec.ema_vqvae.PatchVQVAE
@@ -19,21 +19,21 @@ model:
        add_start_and_end: True
        with_mask: True
        pad_value: 0 # 0 for clip embedding and -100 for others
-       clip_embedding: False     ############################   if we use clip embedding 
+       clip_embedding: False     ############################   if we use clip embedding
        tokenizer_config:
         target: image_synthesis.modeling.modules.clip.simple_tokenizer.SimpleTokenizer   #########
         params:
           end_idx: 49152                              ###################
-    diffusion_config:      
+    diffusion_config:
     # target: image_synthesis.modeling.transformers.gpt_like_transformer.GPTLikeTransformer
       target: image_synthesis.modeling.transformers.diffusion_transformer.DiffusionTransformer
       params:
         diffusion_step: 100
-        alpha_init_type: 'alpha1'       # init_type = fix or cos or linear 
+        alpha_init_type: 'alpha1'       # init_type = fix or cos or linear
         auxiliary_loss_weight: 5.0e-4
         adaptive_auxiliary_loss: True
         mask_weight: [1, 1]    # the loss weight on mask region and non-mask region
-
+        learnable_cf: True
         transformer_config:
           target: image_synthesis.modeling.transformers.transformer_utils.Text2ImageTransformer
           params:
@@ -44,7 +44,7 @@ model:
             content_spatial_size: [32, 32]
             n_embd: 1408 # the dim of embedding dims
             condition_dim: 512
-            n_head: 16 
+            n_head: 16
             attn_pdrop: 0.0
             resid_pdrop: 0.0
             block_activate: GELU2
@@ -96,7 +96,7 @@ solver:
   - name: none # default is None
     optimizer:
       target: torch.optim.AdamW
-      params: 
+      params:
         betas: !!python/tuple [0.9, 0.96]
         weight_decay: 4.5e-2
             # target: ZeroRedundancyOptimizer
@@ -114,7 +114,7 @@ solver:
         threshold: 5.0e-2
         threshold_mode: rel
         warmup_lr: 1.0e-4 # the lr to be touched after warmup   4.5e-4 for train from scratch
-        warmup: 7000 
+        warmup: 7000
 
 dataloader:
   # data_root: data
@@ -141,4 +141,3 @@ dataloader:
           params:
             size: 256
             phase: train
-
